--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,5 +7,31 @@
 }
 .container{
     background: grey;
-    
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+.header{
+    background: orange;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    font-size: 3vw;
+    padding-left: 2%;
+    font-weight: 700;
+    justify-content: center;
+}
+.body{
+    background: green;
+    height: 90%;
+    display: flex;
+    flex-direction: column;   
+}
+.ten{
+    height: 10%;
+    font-size: 2vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
