--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -6,14 +6,13 @@
     height: 100vh;
 }
 .container{
-    background: grey;
+
     height: 100vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
 }
 .header{
-    background: orange;
     height: 10%;
     display: flex;
     align-items: center;
@@ -23,15 +22,40 @@
     justify-content: center;
 }
 .body{
-    background: green;
-    height: 90%;
+
+    height: 60%;
     display: flex;
-    flex-direction: column;   
+    flex-direction: column;  
+    justify-content: center;
+    align-items: center; 
 }
 .ten{
     height: 10%;
-    font-size: 2vw;
+    font-size: 1.75vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2%;
+}
+.login-singup{
+    height: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+a {
+    text-decoration: none;
+    background: grey;
+}
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.75vw;
+    width: 10%;
+    height: 30%;
+    border-radius: 10px;
+    margin-top: 2%;
+    padding: 1.5%;
 }
