--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -59,3 +59,29 @@ a {
     margin-top: 2%;
     padding: 1.5%;
 }
+input{
+    height: 25vh;
+    width: 20vw;
+    padding-left: 2%;
+
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    height: 30vh;
+    width: 30vw;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.form-hold{
+    background: grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;      
+}
+.form-button{
+    width: 20vw;
+    height:20vh;
+
+}
