--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -63,6 +63,9 @@ input{
     height: 25vh;
     width: 20vw;
     padding-left: 2%;
+    border-radius: 10px;
+    outline: none;
+    border: none;
 
 }
 .form{
@@ -83,5 +86,7 @@ input{
 .form-button{
     width: 20vw;
     height:20vh;
+    border-radius: 10px;
+    border: none;
 
 }
