--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -166,3 +166,10 @@ h1{
   align-items: center;
   justify-content: center;
 }
+.body-login-two{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
