--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -29,12 +29,13 @@
   margin-bottom: 2%;
 }
 .login-singup {
-  height: 10vh;
-  width: 30vw;
+  height: 10%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
 }
 a {
   text-decoration: none;
