--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -45,12 +45,20 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.75vw;
+  font-size: 1.25vw;
   width: 10vw;
-  height: 15vh;
+  height: 5vh;
   border-radius: 10px;
   margin-top: 2%;
   padding: 1.5%;
+  background: #FFCDB2;
+  color: black;
+  font-weight: 700;
+}
+.button:hover{
+  font-ize: 1.15vw;
+  width: 9.85vw;
+  height: 4.85vh;
 }
 input {
   height: 5vh;
