--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -28,7 +28,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 2%;
-  color: #ffcdb26d;
+  color: #FFCDB2;
 }
 .login-singup {
   height: 10%;
@@ -227,4 +227,10 @@ textarea{
 }
 .title{
   height: 8vh;
+}
+.body{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15%;
 }
