--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -178,11 +178,12 @@ h1{
   justify-content: center;
 }
 .body-login-two{
-  height: 100vh;
+  height: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: green;
 }
 .container-two{
   height: 100vh;
