--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -180,10 +180,10 @@ h1{
 .body-login-two{
   height: 100vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background: green;
+  flex-wrap: wrap;
+  gap: 2vw;
+  padding: 2vw;
 }
 .container-two{
   height: 100vh;
@@ -250,4 +250,20 @@ textarea{
   color: #6d6875;
   font-size: 1.25vw;
   font-weight: 700;
+}
+.posts-holder-individual{
+  width: 45vw;
+  border: 2px solid black;
+  border-radius: 10px;
+  height: 10vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 1vw;
+}
+.title-post{
+  width: 100%;
+  display: flex;
+  align-items: center;
+
 }
