--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -268,3 +268,15 @@ textarea{
   align-items: center;
 
 }
+.seperate-links{
+  display: flex;
+  
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+.mini-test-link{
+  font-size: 1.35vw;
+  font-weight: 700;
+}
