--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -3,12 +3,17 @@
   margin: 0;
   box-sizing: border-box;
   background: #6d6875;
+  max-width: 99vw;
+  max-height: 99vh;
+  
 }
 .container {
-  height: 100vh;
+  height: 99vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
+
 }
 .header {
   height: 10%;
@@ -184,7 +189,8 @@ h1{
   flex-wrap: wrap;
   gap: 2vw;
   padding: 2vw;
-  overflow-y: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .container-two{
   height: 100vh;
