--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,18 +2,17 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background: #6d6875;
-  max-width: 99vw;
-  max-height: 99vh;
-  
+  overflow: hidden;
+  background: grey;
 }
+
 .container {
-  height: 99vh;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
-
+  background: grey;
 }
 .header {
   height: 10%;
@@ -24,6 +23,7 @@
   font-weight: 700;
   justify-content: center;
   color: #FFCDB2;
+  
 }
 
 .ten {
@@ -183,19 +183,19 @@ h1{
   justify-content: center;
 }
 .body-login-two{
-  height: 100%;
+  height: 95vh;
   display: flex;
-  background: green;
   flex-wrap: wrap;
   gap: 2vw;
   padding: 2vw;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
+  background: rgb(118, 118, 118);
+
 }
 .container-two{
   height: 100vh;
   display: flex;
-
   flex-direction: column;
 }
 .vh{
@@ -241,6 +241,7 @@ textarea{
   display: flex;
   flex-direction: column;
   margin-top: 15%;
+
 }
 .footer-home{
   width: 100vw;
@@ -268,6 +269,8 @@ textarea{
   padding: 1vw;
   gap: 10px;
   font-size: 1vw;
+  
+
 }
 .title-post{
   width: 100%;
