--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -36,7 +36,7 @@
   color: #FFCDB2;
 }
 .login-singup {
-  height: 10%;
+  height: 30%;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -248,7 +248,7 @@ textarea{
   height: 8vh;
 }
 .body{
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   margin-top: 15%;
