--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -287,7 +287,7 @@ textarea{
   width: 100%;
   display: flex;
   align-items: center;
-
+ justify-content: space-between;
 }
 .seperate-links{
   display: flex;
@@ -335,4 +335,8 @@ textarea{
   background: green;
   height: 100%;
   width: 100vw;
+}
+.small-gap{
+  display: flex;
+  gap: .5vw;
 }
